package lapr.project.model;

public interface PortAndCapital {

    /**
     * Gets the latitude of object
     * @return latitude of object
     */
    double getLatitude();

    /**
     * Gets longitude of object
     * @return longitude of object
     */
    double getLongitude();

    /**
     * Gets Continent of object
     * @return continent of object
     */
    String getContinent();
}
